[tool.poetry]
name = "white-swan-scraper"
version = "0.1.0"
description = ""
authors = ["Dominic Chaple <d0mch4pl3@gmail.com>"]
readme = "README.md"
packages = [{include = "white_swan_scraper"}]

[tool.poetry.dependencies]
python = ">3.9, <4.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.27.1"
pandas = "^2.2.3"
wheel = "^0.45.1"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
wheel = "^0.45.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
